@@ -1,3 +1,7 @@
+2007-01-29  Andreas Tobler  <a.tobler@schweiz.org>
+
+	* darwin_stop_world.c: Clean up and reformat code.
+
 2007-01-28  Andreas Tobler  <a.tobler@schweiz.org>
 
 	* darwin_stop_world.c (GC_push_all_stacks): Fix compiler warnings.
